--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ header {
     position: relative;
 }
 nav {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -71,6 +72,7 @@ nav {
 nav div {
      display: flex;
     align-items: flex-end;
+    flex-wrap: wrap;
     justify-content: flex-end;
     line-height: 1.1em;
     padding: .5em;
@@ -104,13 +106,14 @@ nav div button:hover > .bg {
 }
 
 .hero-text h2{
-    font-size: 7.2em;
+    font-size: 7.2vw;
     font-weight: bolder;
     position: relative;
     display: inline;
     line-height: 1em;
     margin-bottom: 3rem;
     letter-spacing: -.1rem;
+    scale: 1 2;
 }
 
 
