--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ a {
 }
 body {
     background: #111;
-    color: #eee;
+    color: #aaa;
     font-family: 'Roboto Mono', monospace;
     overflow-x: hidden;
     /* text-shadow:
@@ -76,7 +76,7 @@ nav div {
     justify-content: flex-end;
     line-height: 1.1em;
     padding: .5em;
-    font-weight: 500;
+    font-weight: 200;
     gap: 10em;
 }
 
