--- a/style.css
+++ b/style.css
@@ -3,20 +3,20 @@
 * {
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 a {
-    color: #aaa;
+    color: #eee;
     text-decoration: none;
 }
 body {
     background: #111;
-    color: #aaa;
+    color: #eee;
     font-family: 'Roboto Mono', monospace;
     overflow-x: hidden;
     /* text-shadow:
     0 0 3px #eee,
     0 0 3px #eee; */
-    
 }
 /* body::before,
 body::after {
@@ -46,7 +46,7 @@ body::before {
     right: 50%;
     translate: -50% -50%;
     border-radius: 50%;
-    background: linear-gradient(to right, aquamarine, mediumpurple);
+    background: linear-gradient(to right, orangered, rgb(255, 145, 0));
     animation: blob-anime 20s infinite;
     filter: blur(50px);
 }
@@ -76,8 +76,8 @@ nav div {
     justify-content: flex-end;
     line-height: 1.1em;
     padding: .5em;
-    font-weight: 200;
     gap: 10em;
+    color: #EEE;
 }
 
 nav div button {
@@ -88,7 +88,7 @@ nav div button {
     padding: .5rem;
     border-radius: 1em;
     cursor: pointer;
-    color: #aaa;
+    color: #EEE;
 }
 nav div button  .bg{
     width: 30%;
