--- a/css/media.css
+++ b/css/media.css
@@ -32,4 +32,34 @@
     display: none;
    }
 
+   .contact {
+    width: 100%;
+    min-height: 40vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5rem;
+    margin-top: 10em;
+}
+.contact h2 {
+    width: 50%;
+    font-size: 2rem;
+    font-weight: 900;
+    color: #eee;
+    /* line-height: 1rem; */
+}
+.contact footer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 1em;
+    gap: 2em;
+}
+.f-links {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
 }
