--- a/css/works.css
+++ b/css/works.css
@@ -1,175 +1,62 @@
 #works {
-    
-}
-
-.work-header {
-    margin-top: 10em;
-    border-top: 1px solid #eeeeee3d;
-    padding: 1em 2em;
+    height: 100vh;
+    padding-left:  15em;
     display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+    overscroll-behavior: none;
+    position: sticky;
+    top: 3em;
+}
+.line_right {
+    width: 0%;
+    /* height: 1vh; */
+    border: .5px solid #eeeeee3d;
+    display: block;
 }
 
-.w-header-text {
-    font-size: 3.5rem;
-    word-spacing: -38px;
+.box {
+    height: 80vh;
+    width: 20vw;
+    border-right: 1px solid #eeeeee3d;
     position: relative;
+    display: grid;
+    place-items: center;
+}
+.box p {
+    font-size: 2.5rem;
+    transform: rotate(90deg);
+    /* position: absolute; */
+    white-space: nowrap;
+    /* bottom: 50%;
+    right: -50%; */
 }
 
-.w-box {
-    width: 100%;
-    height: auto;
-    /* margin-top: 4em; */
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-top: 1px solid #eeeeee3d ;
-    /* border-bottom: 1px solid #eeeeee3d ; */
-    z-index: 9999;
-    cursor: pointer;
+.box-1 {
+    /* margin-left: 30rem; */
 }
-
-.works-container .w-box:nth-child(4) {
-    border-bottom: 1px solid#eeeeee3d;
-}
-
- .expand {
-    width: 200px;
-    /* background-color: #333; */
-    text-align: center;
-    padding: 10px;
-    border-radius: 10px;
-    opacity: 0;
-    transition: 300ms opacity ease-in;
+.box-1::before {
+    content: '01';
+    color: #aaa;
+    font-size: 2em;
+    opacity: .5;
+    font-weight: 100;
     position: absolute;
-    top: 3rem;
+    right: 0;
+    top: 0;
 }
 
-/* .w-box:hover >  .expand{
-    opacity: 1;
-} */
-.p-sec {
-    width: 100%;
-  display: flex;
-  align-items: center;
- justify-content: space-between;
- padding: .8em;
-}
-.p-sec button {
-    background: transparent;
-    z-index: 9999;
-    border: 1px solid #eeeeee3d;
-    position: relative;
-    padding: .5rem;
-    border-radius: .5em;
-}
-.p-sec button  .bg{
-    width: 100%;
-    height: 0%;
-    background-color: orangered;
+.box-2::before {
+    content: '02';
+    color: #aaa;
+    font-size: 2em;
+    opacity: .5;
+    font-weight: 100;
     position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: -1;
-    transition: 300ms height;
-}
-.p-sec button:hover > .bg {
-    height: 100%;
-}
-.p-d {
-    display: flex;
-    align-items: center;
-    gap: 1em;
-}
-.p-d h1 {
-    font-size: 4em;
-}
-.p-f-featured-images {
-    width: 100%;
-    padding: 2em 1em;
-    overflow: hidden;
-    /* display: flex; */
-}
-.a-p {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    gap: 4rem;
-}
-.p-img-c {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    gap: 3em;
-    animation: marque 50s infinite;
-}
-.p-img-c:hover {
-    animation-play-state: paused;
-}
-.p-img-c .img {
-    flex-basis: 40%;
-    flex-shrink: 0;
-}
-.p-f-featured-images img {
-    width: 100%;
+    right: 0;
+    top: 0;
 }
 
-.f-c {
-    position: absolute;
-    right: 8rem;
-    top: 6rem;
-}
 
-.face {
-    width: 130px;
-    height: 130px;
-    border-radius: 50%;
-    background: yellow;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: .5s;
-    
-}
-
-.face::before {
-    content: '';
-    position: absolute; 
-    bottom: 15%;
-    width: 5rem;
-    height: 2rem;
-    border-bottom-right-radius: 50px;
-    border-bottom-left-radius: 50px;
-    background: #ee222e;
-    top: 5.3rem;
-    transition: .5s;
-}
-.eyes {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    position: absolute;
-    top: 20%;
-}
-.eye {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background: #eee;
-    position: relative;
-}
-.eye::before {
-    content: '';
-    width: 1.5rem;
-    height: 1.5rem;
-    position: absolute;
-    transform: translate(-50%), -50%;
-    background-color: black;
-    border-radius: 50%;
-}
+ 
 
 @keyframes marque {
     0% {
