--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 * {
     margin: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
 a {
-    color: #eee;
+    color: #aaa;
     text-decoration: none;
 }
 body {
     background: #111;
-    color: #eee;
+    color: #aaa;
     font-family: 'Roboto Mono', monospace;
     overflow-x: hidden;
     /* text-shadow:
@@ -49,18 +49,18 @@ body::before {
     background: linear-gradient(to right, orangered, rgb(255, 145, 0));
     animation: blob-anime 20s infinite;
     filter: blur(50px);
+    display: none;
 }
 svg {
     display: none;
 }
 header {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    padding: 1em;
-    /* gap: 0rem; */
+    padding: 1em 3em;
+    gap: 3rem;
     position: relative;
 }
 nav {
@@ -77,7 +77,6 @@ nav div {
     line-height: 1.1em;
     padding: .5em;
     gap: 10em;
-    color: #EEE;
 }
 
 nav div button {
@@ -88,7 +87,7 @@ nav div button {
     padding: .5rem;
     border-radius: 1em;
     cursor: pointer;
-    color: #EEE;
+    color: #aaa;
 }
 nav div button  .bg{
     width: 30%;
@@ -105,22 +104,37 @@ nav div button:hover > .bg {
     width: 100%;
 }
 
+
+.hero-text {
+    overflow: hidden;
+}
 .hero-text h2{
-    font-size: 7.2vw;
+    font-size: 15rem;
     font-weight: bolder;
-    position: relative;
-    display: inline;
     line-height: 1em;
-    margin-bottom: 3rem;
+    margin: 3rem 0;
     letter-spacing: -.1rem;
-    scale: 1 2;
+    font-family: 'Bebas Neue', sans-serif;
+    color: #777;
 }
 
+.about-c {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 30em 3em;
+}
+
+.about-c p {
+    font-size: 4rem;
+    word-spacing: -.1em;
+}
 
 .scroll-down {
     position: absolute;
     bottom: 1em;
-    right: 4em;
+    right: 45%;
     display: flex;
     align-items: center;
     gap: 2em;
