--- a/css/works.css
+++ b/css/works.css
@@ -4,111 +4,86 @@
     padding-left: 40em;
     display: flex;
     align-items: center;
+    /* justify-content: center; */
+    gap: 1em;
     overscroll-behavior: none;
     position: sticky;
-    top: 2em;
+    top: 1em;
 }
 .line_right {
-    width: 0%;
-    /* height: 1vh; */
+    width: 1px;
+    height: 100%;
     border: .5px solid #eeeeee3d;
     display: block;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+
 }
 
-.box {
-    height: 80vh;
+#works > a {
     width: 20vw;
-    border-right: 1px solid #eeeeee3d;
+    height: 90%;
     position: relative;
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1em;
+    gap: 2rem;
 }
-.box img {
-    position: absolute;
-    transform: translate(0%, 15%) scale(0.5) ;
-    transition: transform 250ms, opacity 250ms;
-    opacity: 0;
-    pointer-events: none;
-    width: min(50vw, 500px);
+
+#works > a > .img {
+pointer-events: none;
+width: 100%;
+min-height: 40vh;
 }
-.box a:hover > .img-1 {
+#works > a > .img img{
+    width: 100%;
+    height: 100%;
+    }
+#works > a:hover > img {
     opacity: 1;
-    transform: translate(0%, 15%) scale(1) ;
+    transform: scale(1);
 }
-.box a {
-    font-size: 2.5rem;
-    transform: rotate(90deg);
-    white-space: nowrap;
+.w-header {
+    font-weight: 900;
+    font-size: 4rem;
+    rotate: 90deg;
     color: #eee;
 }
-
-.box-1 {
-    /* margin-left: 59rem; */
+.contact {
+    width: 100%;
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
+    gap: 10rem;
+    background-color: #111;
+    margin-top: 120em;
+    z-index: 999;
+    position: relative;
 }
-.box-1::before {
-    content: '01';
-    color: #aaa;
-    font-size: 2em;
-    opacity: .5;
-    font-weight: 100;
-    position: absolute;
-    right: 0;
-    top: 0;
+.skills {
+    font-size: 3em;
+    margin-left: 10em;
 }
-
-.box-2::before {
-    content: '02';
-    color: #aaa;
-    font-size: 2em;
-    opacity: .5;
-    font-weight: 100;
-    position: absolute;
-    right: 0;
-    top: 0;
+.contact h2 {
+    font-size: 2rem;
+    font-weight: 900;
+    color: #eee;
+    /* line-height: 1rem; */
 }
 
-.box-3::before {
-    content: '03';
-    color: #aaa;
-    font-size: 2em;
-    opacity: .5;
-    font-weight: 100;
-    position: absolute;
-    right: 0;
-    top: 0;
+.contact footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em;
 }
 
-.box-4::before {
-    content: '04';
-    color: #aaa;
-    font-size: 2em;
-    opacity: .5;
-    font-weight: 100;
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-
-.box-5::before {
-    content: '05';
-    color: #aaa;
-    font-size: 2em;
-    opacity: .5;
-    font-weight: 100;
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-
-.box-6::before {
-    content: '06';
-    color: #aaa;
-    font-size: 2em;
-    opacity: .5;
-    font-weight: 100;
-    position: absolute;
-    right: 0;
-    top: 0;
+.f-links {
+    display: flex;
+    gap: 1em;
 }
 
 
