--- a/css/media.css
+++ b/css/media.css
@@ -23,10 +23,15 @@
    .hero_section .hero_container_2 ul {
     flex-direction: column;
     align-items: flex-start;
-   }
-   .hero-text h2 {
-    font-size: 9vw;
-    scale: 1.2 3;
+    gap: 0;
+   } 
+  
+
+.hero_section  .hero_container_1 p {
+    font-size: 20vw;
+    scale: 1.6 3;
+    line-height: 1em;
+    margin-bottom: 1em;
    }
    .scroll-down {
     /* display: none; */
@@ -40,16 +45,6 @@
    #works {
     overflow: hidden;
    }
-   .w-header-text {
-    font-size: 11vw;
-   }
-   .work-header p {
-    display: none;
-   }
-   .face {
-    display: none;
-   }
-
    .contact {
     width: 100%;
     min-height: 40vh;
