--- a/style.css
+++ b/style.css
@@ -123,10 +123,11 @@ nav div button:hover>.bg {
     line-height: 1em;
     margin: 1.3rem 0;
     font-family: 'Bebas Neue', sans-serif;
-    color: #777;
+    letter-spacing: -0.01em;  
+    padding: 0.6em 0
 }
 
-.hero_section div p {
+.hero_section .hero_container_1 p {
     scale: 1 2;
     color: rgb(182, 54, 8);
     letter-spacing: .05EM;
