--- a/css/media.css
+++ b/css/media.css
@@ -16,14 +16,20 @@
         align-items: flex-start;
         justify-content: center;
        gap: 1em;
+       padding: 0;
+   }
+   .arrow-container span {
+    font-size: 1em;
    }
    .hero_section .hero_container_2 {
-    align-items: flex-end;
+    align-items: center;
+    justify-content: center;
    }
    .hero_section .hero_container_2 ul {
     flex-direction: column;
     align-items: flex-start;
     gap: 0;
+    display: none;
    } 
   
 
