--- a/css/media.css
+++ b/css/media.css
@@ -31,7 +31,12 @@
     gap: 0;
     display: none;
    } 
-  
+
+   .hero_section  .hero_container_1 {
+
+    padding: 2em 0;
+    overflow-x: hidden;
+   }
 
 .hero_section  .hero_container_1 p {
     /* font-size: 16vw; */
@@ -50,9 +55,37 @@
    .about-c p {
     margin: 0;
    }
+
    #works {
-    overflow: hidden;
+    width: 100%;
+    flex-direction: column;
+    padding: 0;
+    position: static;
+    margin-top: 2em;
+    gap: 3em;
    }
+   #works > a {
+    width: 100%;
+    min-height: 50vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1em;
+    gap: 2rem;
+}
+#works > a > .img {
+    min-height: auto;
+}
+.w-header {
+    font-size: 2rem;
+    rotate: 0deg;
+}
+.line_right {
+    left: 0;
+    width: 100%;
+    height: 1px;
+}
    .contact {
     width: 100%;
     min-height: 40vh;
