--- a/css/media.css
+++ b/css/media.css
@@ -65,7 +65,7 @@
     gap: 3em;
    }
    #works > a {
-    width: 100%;
+    width: 90%;
     min-height: 50vh;
     position: relative;
     display: flex;
@@ -96,11 +96,9 @@
     margin-top: 10em;
 }
 .contact h2 {
-    width: 50%;
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: 900;
     color: #eee;
-    /* line-height: 1rem; */
 }
 .contact footer {
     width: 100%;
@@ -113,7 +111,8 @@
 }
 .f-links {
     display: flex;
-    flex-direction: column;
     gap: 1em;
+    width: 50%;
+    flex-wrap: wrap;
 }
 }
