--- a/css/works.css
+++ b/css/works.css
@@ -63,6 +63,7 @@ min-height: 40vh;
     margin-top: 120em;
     z-index: 999;
     position: relative;
+    overflow: hidden;
 }
 .contact h2 {
     font-size: 2rem;
@@ -73,6 +74,7 @@ min-height: 40vh;
     border-top: 1px solid#eeeeee3d;
     border-bottom: 1px solid#eeeeee3d;
     padding: 2em;
+    margin: 4em;
     
 }
 .marque {
