--- a/css/media.css
+++ b/css/media.css
@@ -51,9 +51,12 @@
    }
    .about-c {
     padding: 10em 2em;
+    background: #131419;
    }
    .about-c p {
+    width: auto;
     margin: 0;
+    font-size: 1.4em;
    }
 
    #works {
@@ -66,13 +69,21 @@
    }
    #works > a {
     width: 90%;
-    min-height: 50vh;
+    min-height: 53vh;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 1em;
     gap: 2rem;
+}
+#works > a::before {
+    content: 'see live';
+    position: absolute;
+    bottom: 1em;
+    border: 1px solid #eeeeee3d;
+    border-radius: 1em;
+    padding: .5em;
 }
 #works > a > .img {
     min-height: auto;
@@ -94,7 +105,7 @@
     align-items: center;
     gap: 5rem;
     margin-top: 10em;
-    background: rgba(182, 54, 8, 0.644);
+    /* background: rgba(182, 54, 8, 0.644); */
 }
 .contact h2 {
     font-size: 1rem;
