--- a/style.css
+++ b/style.css
@@ -122,18 +122,19 @@ nav div button:hover>.bg {
 }
 
 .hero_section .hero_container_1 {
-    font-size: 16vw;
+    font-size: 16.9vw;
     font-weight: 900;
     line-height: .8em;
-    margin: 1.3rem 0;
+    margin: 1rem 0;
     font-family: 'Bebas Neue', sans-serif;
     letter-spacing: -0.01em;
-    padding: 0.6em 0
+    padding: 0.54em 0;
+    
 }
-
 .hero_section .hero_container_1 p {
     scale: 1 2;
-    color: rgb(182, 54, 8);
+    /* color: rgb(182, 54, 8); */
+    color: #b4b4b4;
     letter-spacing: .05EM;
     text-align: center;
     mix-blend-mode: difference;
@@ -145,8 +146,8 @@ nav div button:hover>.bg {
     display: flex;
     flex-direction: column;
     gap: 5em;
-    padding: 20em 3em;
-    background: rgba(182, 54, 8, 0.644);
+    padding: 10em 3em;
+    /* background: rgba(182, 54, 8, 0.644); */
     z-index: -1;
     position: relative;
 }
