--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
 } */
 header {
     width: 100%;
-    min-height: 100vh;
+    min-height: 100dvh;
     display: flex;
     flex-direction: column;
     padding: 2em 3em;
