--- a/style.css
+++ b/style.css
@@ -138,7 +138,13 @@ nav div button:hover>.bg {
     letter-spacing: .05EM;
     text-align: center;
     mix-blend-mode: difference;
-    /* pointer-events: none; */
+    pointer-events: none;
+      -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .about-c {
