--- a/css/media.css
+++ b/css/media.css
@@ -3,7 +3,7 @@
         display: none;
     }
     header {
-        height: 100vh;
+        height: 100dvh;
         justify-content: space-between;
         padding: 2em 1em;
 
