--- a/style.css
+++ b/style.css
@@ -8,25 +8,81 @@
 }
 
 a {
-    color: #b4b4b4;
+    color: #aaa;
     text-decoration: none;
 }
 
 
 body {
-    background: #131419;
-    color: #b4b4b4;
+    background: #111;
+    color: #aaa;
     font-family: 'Roboto Mono', monospace;
     overflow-x: hidden;
+    
 }
-
+p {
+ pointer-events: none;
+      -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 ::-webkit-scrollbar {
     display: none;
 }
+.loader {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #131419;
+    /* z-index: 2; */
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    align-items: center;
+}
+.loading_bar {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  right: 50%;
+  /* opacity: 0; */
+}
+.loading_bar p {
+    color: #aaa;
+    position: absolute;
+    width: 150px;
+    bottom: 35%;
+    margin-left: 2.5em;
+}
+@keyframes arrows {
+  0%,
+  100% {
+    color: #aaa;
+    transform: translateY(0);
+  }
+  50% {
+    color: #aaa;
+    transform: translateY(20px);
+  }
+}
 
+.loading_bar span {
+  --delay: 0s;
+  animation: arrows 1s var(--delay) infinite ease-in;
+  font-size: 1.2em;
+}
+.stagger {
+  height: 100%;
+  background-color: #363636;
+}
 .blob {
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
     position: fixed;
     opacity: 0;
     left: 50%;
@@ -36,9 +92,9 @@ body {
     background: rgb(182, 54, 8);
     animation: blob-anime 20s infinite;
 }
-/* body:hover > .blob {
+body:hover > .blob {
     opacity: 1;
-} */
+}
 header {
     width: 100%;
     min-height: 100dvh;
@@ -70,12 +126,13 @@ nav div {
 
 nav div button {
     background: transparent;
-    border: 2px solid #eeeeee3d;
+    border: 1.5px solid #aaa;
     position: relative;
     padding: .5rem;
     border-radius: 1em;
     cursor: pointer;
-    color: #b4b4b4;
+    color: #aaa;
+    font-size: 1em;
 
 }
 
@@ -111,7 +168,7 @@ nav div button:hover>.bg {
     position: absolute;
     top: 0;
     left: 0;
-    border-top: 1px solid #eeeeee3d;
+    border-top: 1px solid #b4b4b4;
 }
 
 .hero_container_2 ul {
@@ -134,17 +191,10 @@ nav div button:hover>.bg {
 .hero_section .hero_container_1 p {
     scale: 1 2;
     /* color: rgb(182, 54, 8); */
-    color: #b4b4b4;
+    color: #8f8f8f;
     letter-spacing: .05EM;
     text-align: center;
     mix-blend-mode: difference;
-    pointer-events: none;
-      -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
 }
 
 .about-c {
