--- a/css/media.css
+++ b/css/media.css
@@ -108,6 +108,7 @@
     align-items: center;
     gap: 5rem;
     margin-top: 10em;
+    background: #111;
     /* background: rgba(182, 54, 8, 0.644); */
 }
 .contact h2 {
