--- a/css/works.css
+++ b/css/works.css
@@ -1,15 +1,17 @@
 #works {
     width: 980%;
     min-height: 100vh;
+    padding-top: 10em;
     padding-left: 40em;
     display: flex;
     align-items: center;
+    /* justify-content: center; */
     gap: 1em;
     overscroll-behavior: none;
     position: sticky;
     top: .2em;
 }
-.line_right {
+/* .line_right {
     width: 1px;
     height: 100%;
     border: 1.2px solid #aaa;
@@ -18,15 +20,15 @@
     bottom: 0;
     right: 0;
 
-}
+} */
 
 #works > a {
-    width: 20vw;
+    width: 30vw;
     min-height: 80vh;
     position: relative;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     padding: 1em;
     gap: 2rem;
 }
@@ -34,16 +36,12 @@
 #works > a > .img {
 pointer-events: none;
 width: 100%;
-min-height: 40vh;
 }
-#works > a > .img img{
+.img img{
     width: 100%;
     height: 100%;
     }
-#works > a:hover > img {
-    opacity: 1;
-    transform: scale(1);
-}
+
 .w-header {
     font-weight: 900;
     font-size: 2rem;
