--- a/css/media.css
+++ b/css/media.css
@@ -150,7 +150,7 @@
     right: 0;
   }
   .hero_section .hero_container_1 p {
-    /* font-size: 10.5vw; */
+    font-size: 10.5vw;
     scale: 1.6 2.5;
     line-height: 1em;
     margin-bottom: 1em;
